Bottom Button Wrapper Gap Fix

--- a/src/components/BottomButtonWrapper/BottomButtonWrapper.module.css
+++ b/src/components/BottomButtonWrapper/BottomButtonWrapper.module.css
@@ -15,6 +15,7 @@
 .absoluteBottom_wrapper {
     display: flex;
     padding: 0 15px;
+    gap: 5px;
 }
 
 .redButton {
